--- a/菜品分析与洞察.md
+++ b/菜品分析与洞察.md
@@ -14,15 +14,15 @@
 
 ![截屏2024-10-05 下午2.27.42](/Users/lankasite/Library/Application Support/typora-user-images/截屏2024-10-05 下午2.27.42.png)  
 
-​	从大区的分组柱状图可以看出，不同大区的菜品推荐数和平均价格存在显著差异，这反映了不同大区对于湘菜的不同偏好。例如，华南与华中大区的菜品推荐数高于其他大区，说明该地区的消费者更易于接受湘菜，而华西区与华北区的湘菜平均推荐数则相对较低，反应出这个地区的消费者对湘菜的评价与接受度相对较低，另外，由于华东区与华南区平均推荐数与平均价格存在较大差异，也能够反应这个地区的人更追求物美价廉或者高性价比的湘菜。
+​	从大区的分组柱状图可以看出，不同大区的菜品推荐数和平均价格存在显著差异，这反映了不同大区对于湘菜的不同偏好。例如，华南与华中大区的菜品推荐数高于其他大区，说明该地区的消费者更易于接受湘菜，而华西区与华北区的湘菜平均推荐数则相对较低，反应出这个地区的消费者对湘菜的评价与接受度相对较低，另外，由于华东区、华南区的平均推荐数与平均价格存在较大差异，也能够反应这个地区的人更追求物美价廉或者高性价比的湘菜。
 
 ### 3.**湘菜菜品平均价格和推荐数的增长趋势**
 
-### ![截屏2024-10-05 下午9.35.26](/Users/lankasite/Library/Application Support/typora-user-images/截屏2024-10-05 下午9.35.26.png)
+### ![截屏2024-10-07 上午9.21.57](/Users/lankasite/Library/Application Support/typora-user-images/截屏2024-10-07 上午9.21.57.png)
 
-![截屏2024-10-05 下午9.35.50](/Users/lankasite/Library/Application Support/typora-user-images/截屏2024-10-05 下午9.35.50.png)	
+![截屏2024-10-07 上午9.21.00](/Users/lankasite/Library/Application Support/typora-user-images/截屏2024-10-07 上午9.21.00.png)
 
-​	从“所有菜品的平均价格同比与环比增长率趋势图”和“所有菜品的推荐数同比与环比增长率趋势”可以看出，不同时间点的菜品价格和推荐数存在波动。所有湘菜菜品的环比平均价格增长率自2023年5月以来呈现出不断上升的趋势，然后自9月份开始骤降并在11月份之后转为负增长，之后仍在0增长率之下波动；均价同比增长率也呈现出下滑的趋势，从2024年3月的0.45%至5月以后的-1.79%。与之相反，湘菜的平均推荐数却呈现出不断增多的趋势，推荐数环比增长率在2至4倍区间波动，推荐数同比增长率则高达5至8倍。这或许反应出自2023年初中国疫情解封以来，在人们保持高涨的餐饮消费意愿的同时，也因为经济下行而导致消费者购买力不足，从而引起平均价格的下行。
+​	从“所有菜品的平均价格同比与环比增长率趋势图”和“所有菜品的推荐数同比与环比增长率趋势”可以看出，不同时间点的菜品价格和推荐数存在波动。所有湘菜菜品的环比平均价格增长率自2023年5月以来呈现出不断上升的趋势，然后自9月份开始骤降并在11月份之后转为负增长，之后仍在0增长率之下波动；均价同比增长率也呈现出下滑的趋势，从2024年3月的0.45%至5月以后的-1.79%。与之相反，湘菜的平均推荐数却呈现出不断增多的趋势，推荐数环比增长率在2至4倍区间波动，推荐数同比增长率则高达5至8倍。这或许反应出自2023年初中国疫情解封以来，在人们保持高涨的餐饮消费意愿的同时，或许因为经济下行而导致消费者购买力不足，从而引起平均价格的下行。
 
 ### 4. **中国各省份湘菜平均价格与推荐数分布**
 
@@ -30,7 +30,7 @@
 
 ![截屏2024-10-05 下午9.37.22](/Users/lankasite/Library/Application Support/typora-user-images/截屏2024-10-05 下午9.37.22.png)
 
-​	根据中国各省份湘菜平均价格与推荐数分布图，可以看出平均湘菜价格相对较高的几个省份是是北京、四川、湖南、重庆等，河南、辽宁、青海的平均价格则相对较低。广东、湖南、陕西等省份对于湘菜的评价相对较高，这也反应了中国确实存在对于湘菜品类偏好的地域差别。由于广东和陕西的湘菜均价相对较低但是推荐数很高，这两个省份的湘菜更具有性价比。
+​	根据中国各省份湘菜平均价格与推荐数分布图，可以看出平均湘菜价格相对较高的几个省份是是北京、四川、湖南、重庆等，河南、辽宁、青海的平均价格则相对较低。广东、湖南、陕西等省份对于湘菜的评价相对较高，这也反应了中国确实存在对于湘菜品类偏好的地域差别。由于广东和陕西的湘菜均价相对较低但是推荐数很高，因此这两个省份的湘菜更具有性价比。
 
 ### 5.**各省份前10推荐数和价格的菜品分布**
 
@@ -38,7 +38,7 @@
 
 ![截屏2024-10-05 下午9.41.49](/Users/lankasite/Library/Application Support/typora-user-images/截屏2024-10-05 下午9.41.49.png)
 
-​	不同省份的菜品推荐数和平均价格有着显著差异。从各省前10平均推荐数菜品来看，广东与湖南省对湘菜的推荐数头部菜品评价相对较高，西部省份评价则相对较低。湖南、北京、广东与上海对于平均价格前10的购买力相对较高，这反映出不同地区的经济水平的差异以及饮食文化的偏好。
+​	不同省份的菜品推荐数和平均价格有着显著差异。从各省前10平均推荐数菜品来看，广东与湖南省对湘菜的推荐数头部菜品评价相对较高，西部省份评价则相对较低。湖南、北京、广东与上海对于平均价格前10的购买力相对较高，这反映出不同地区的经济水平的差异以及饮食文化的偏好。热门菜品当中，小炒黄牛肉、辣椒炒肉等受到多个省份的消费者推荐，小炒黄牛肉受到的推荐最多，也是广东、湖南湘菜热门省份最喜欢的菜品。
 
 ### 6.**特定菜品分析**
 
@@ -48,7 +48,7 @@
 
 ![截屏2024-10-05 下午10.23.39](/Users/lankasite/Desktop/截屏2024-10-05 下午10.23.39.png)
 
-![截屏2024-10-05 下午9.42.59](/Users/lankasite/Library/Application Support/typora-user-images/截屏2024-10-05 下午10.23.49.png)
+![截屏2024-10-07 上午9.33.24](/Users/lankasite/Library/Application Support/typora-user-images/截屏2024-10-07 上午9.33.24.png)
 
 ​	不同省份对菜品的偏好不同。以小炒黄牛肉为例，小炒黄牛肉是广东、湖南与北京最受推荐的菜品，但其售价却以海南、北京、上海等为最贵，安徽、辽宁、甘肃、贵州等地区其售价则相对较低。小炒黄牛肉的平均价格在2023年5月至2023年9月之间呈现不断上升的趋势，之后不断下降直到2024年3月份触底反弹并快速上涨。其平均价格同比增长率自2024年3月份以来快速上涨，从1.81%至9.12%。其平均推荐数环比增长率呈现先下降后上升的趋势，而同比增长率则实现2倍多的增长。
 
